--- a/src/assets/styles/foundation/_palettes.scss
+++ b/src/assets/styles/foundation/_palettes.scss
@@ -2,5 +2,8 @@ $accent: #007682;
 $primary: #0C1D25;
 $secondary: #FFFFFF;
 $primaryText: #FFFFFF;
-$secondaryText: #888888;
+$secondaryText: #575757;
 $primaryTextVariant: #000000;
+$hoverPrimaryColor: #014c54;
+$hoverSecondaryColor: #d6d6d6;
+$darkGray: #8b8b8b;
