--- a/src/assets/styles/foundation/_general.scss
+++ b/src/assets/styles/foundation/_general.scss
@@ -57,6 +57,36 @@ body {
   }
 }
 
+.order-0 {
+  order: 0;
+
+  &.mb {
+    @media screen and (min-width: #{$md-size}) {
+      order: unset;
+    }
+  }
+}
+
+.order-1 {
+  order: 1;
+
+  &.mb {
+    @media screen and (min-width: #{$md-size}) {
+      order: unset;
+    }
+  }
+}
+
+.order-2 {
+  order: 2;
+
+  &.mb {
+    @media screen and (min-width: #{$md-size}) {
+      order: unset;
+    }
+  }
+}
+
 .btn,
 .btn-primary {
   @include buttonPrimary;
