--- a/src/assets/styles/foundation/_variables.scss
+++ b/src/assets/styles/foundation/_variables.scss
@@ -6,4 +6,4 @@ $sm-size: 540px;
 $navbar-button-size: 40px;
 
 $header-height: 90px;
-$header-transition-duration: 200ms;
+$transition-duration: 200ms;
