--- a/src/assets/styles/foundation/_variables.scss
+++ b/src/assets/styles/foundation/_variables.scss
@@ -7,3 +7,5 @@ $navbar-button-size: 40px;
 
 $header-height: 90px;
 $transition-duration: 200ms;
+
+$active-icon: url('/src/assets/imgs/active-icon.png');
