--- a/src/assets/styles/foundation/_mixins.scss
+++ b/src/assets/styles/foundation/_mixins.scss
@@ -60,3 +60,45 @@
     color: $hoverPrimaryColor;
   }
 }
+
+@mixin activeEffect {
+  position: relative;
+  display: inline-block;
+
+  > * {
+    position: relative;
+    display: inline-block;
+    transition: all $transition-duration ease-in-out;
+    transform: translateY(0);
+  }
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    width: 100%;
+    height: 30px;
+    background-image: $active-icon;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: all $transition-duration ease-in-out;
+    transform: translateY(30px);
+    opacity: 0;
+  }
+
+  &.active,
+  &:active,
+  &:hover,
+  &:focus {
+    > * {
+      transform: translateY(-50%);
+    }
+
+    &::after {
+      transform: translateY(10px);
+      opacity: 1;
+    }
+  }
+}
