--- a/src/assets/styles/foundation/_palettes.scss
+++ b/src/assets/styles/foundation/_palettes.scss
@@ -6,4 +6,6 @@ $secondaryText: #575757;
 $primaryTextVariant: #000000;
 $hoverPrimaryColor: #014c54;
 $hoverSecondaryColor: #d6d6d6;
+$transparentAccent: #00758292;
+$transparentPrimary: #0C1D2592;
 $darkGray: #8b8b8b;
