--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -4,4 +4,5 @@
 @use "./foundation/fonts";
 @use "./foundation/general";
 @use "./foundation/typography";
+@use "./components/siteDecorator";
 @use "./components/header";
