--- a/src/assets/styles/foundation/_variables.scss
+++ b/src/assets/styles/foundation/_variables.scss
@@ -5,6 +5,8 @@ $sm-size: 540px;
 
 $navbar-button-size: 40px;
 
+$container-padding: 2rem;
+
 $header-height: 90px;
 $transition-duration: 200ms;
 $site-transition: all $transition-duration ease-in-out;
