--- a/src/assets/styles/foundation/_variables.scss
+++ b/src/assets/styles/foundation/_variables.scss
@@ -11,4 +11,6 @@ $header-height: 90px;
 $transition-duration: 200ms;
 $site-transition: all $transition-duration ease-in-out;
 
+$fatha-ratio: 317/116;
 $active-icon: url('/src/assets/imgs/active-icon.png');
+$fatha-image: url('/src/assets/imgs/header-img.png');
