--- a/src/assets/styles/foundation/_mixins.scss
+++ b/src/assets/styles/foundation/_mixins.scss
@@ -61,13 +61,11 @@
   }
 }
 
-@mixin activeEffect {
+@mixin activeEffect($rise-value: 30px) {
   position: relative;
-  display: inline-block;
 
   > * {
     position: relative;
-    display: inline-block;
     transition: $site-transition;
     transform: translateY(0);
   }
@@ -75,10 +73,11 @@
   &::after {
     content: '';
     position: absolute;
-    left: 0;
+    right: 0;
+    bottom: 0;
     display: inline-block;
     width: 100%;
-    height: 30px;
+    aspect-ratio: $fatha-ratio;
     background-image: $active-icon;
     background-position: center;
     background-repeat: no-repeat;
@@ -93,7 +92,7 @@
   &:hover,
   &:focus {
     > * {
-      transform: translateY(-50%);
+      transform: translateY(calc($rise-value * -1));
     }
 
     &::after {
@@ -113,4 +112,52 @@
   -ms-backdrop-filter: $value;
   -o-backdrop-filter: $value;
   backdrop-filter: $value;
+}
+
+@mixin card {
+  transition: $site-transition;
+  border-radius: 20px;
+  box-shadow:
+    inset 0 10px 15px rgba(255, 255, 255, 0),
+    inset 0 -10px 15px rgba(255, 255, 255, 0),
+    inset -5px 0 10px rgba(255, 255, 255, 0),
+    inset 5px 0 10px rgba(255, 255, 255, 0),
+    0 10px 15px rgba(0, 0, 0, 0);
+
+  &:hover,
+  &:active,
+  &:focus,
+  &:focus-within,
+  &.card-active {
+    box-shadow:
+    inset 0 10px 15px rgba(255, 255, 255, 0),
+    inset 0 -10px 15px rgba(255, 255, 255, 0.1),
+    inset -5px 0 10px rgba(255, 255, 255, 0.1),
+    inset 5px 0 10px rgba(255, 255, 255, 0.1),
+    0 10px 15px rgba(0, 0, 0, 0.2);
+  }
+}
+
+@mixin fatha($pos: right) {
+  position: relative;
+
+  &::after {
+    $translateX: 75%;
+    $translateY: ($translateX * -1);
+    content: '';
+    position: absolute;
+    top: 0;
+    #{$pos}: 0;
+    @if $pos == left {
+      $translateX: ($translateX * -1);
+    }
+    transform: translate($translateX, $translateY);
+    width: 200vw;
+    aspect-ratio: $fatha-ratio;
+    background-image: $fatha-image;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
+  }
 }
