--- a/src/assets/styles/foundation/_typography.scss
+++ b/src/assets/styles/foundation/_typography.scss
@@ -16,22 +16,41 @@ span {
   color: $primaryText;
 }
 
+.heading-font {
+  font-family: Fatimah;
+}
+
+.content-font {
+  font-family: Almarai;
+}
+
 h1,
 .h1 {
-  font-size: 5em;
+  font-size: clamp(3rem, 8vw, 5rem);
   line-height: 1;
 }
 
-h2 {
-  font-size: 2em;
+h2,
+.h2 {
+  font-size: clamp(2rem, 7vw, 4rem);
 }
 
-h3 {
-  font-size: 1.5em;
+h3,
+.h3 {
+  font-size: clamp(1.5rem, 6vw, 3rem);
 }
 
 h4,
 h5,
-h6 {
-  font-size: 1em;
+h6,
+.h4,
+.h5,
+.h6 {
+  font-size: clamp(1rem, 5vw, 2rem);
+}
+
+p {
+  font-size: clamp(1rem, 3vw, 1.4rem);
+  font-weight: lighter;
+  line-height: 1.5;
 }
