--- a/src/assets/styles/foundation/_mixins.scss
+++ b/src/assets/styles/foundation/_mixins.scss
@@ -116,12 +116,9 @@
 
 @mixin card {
   transition: $site-transition;
-  border-radius: 20px;
+  border-radius: $card-border-radius;
   box-shadow:
-    inset 0 10px 15px rgba(255, 255, 255, 0),
     inset 0 -10px 15px rgba(255, 255, 255, 0),
-    inset -5px 0 10px rgba(255, 255, 255, 0),
-    inset 5px 0 10px rgba(255, 255, 255, 0),
     0 10px 15px rgba(0, 0, 0, 0);
 
   &:hover,
@@ -130,10 +127,7 @@
   &:focus-within,
   &.card-active {
     box-shadow:
-    inset 0 10px 15px rgba(255, 255, 255, 0),
     inset 0 -10px 15px rgba(255, 255, 255, 0.1),
-    inset -5px 0 10px rgba(255, 255, 255, 0.1),
-    inset 5px 0 10px rgba(255, 255, 255, 0.1),
     0 10px 15px rgba(0, 0, 0, 0.2);
   }
 }
@@ -160,4 +154,51 @@
     background-size: cover;
     z-index: -1;
   }
+}
+
+@mixin field {
+  padding: 0.5rem 1rem;
+  width: fit-content;
+  line-height: 1;
+  font-size: 1rem;
+  color: $secondaryText;
+  background-color: $secondary;
+  border: unset;
+  border-radius: 3rem;
+  cursor: pointer;
+
+  &:focus,
+  &:focus-within {
+    outline: 2px solid $accent;
+  }
+
+  > * {
+    border: unset;
+    outline: unset;
+  }
+
+  &.icon-field {
+    display: flex;
+    align-items: center;
+
+    .icon {
+      margin-inline-end: 0.5rem;
+      padding-inline-end: 0.5rem;
+      display: inline-block;
+      color: $accent;
+      border-left: 1px solid $accent;
+    }
+  }
+}
+
+@mixin category {
+  padding: 0.5rem;
+  display: inline-block;
+  font-size: 0.8em;
+  line-height: 1;
+  color: $primaryText;
+  text-decoration: none;
+  background-color: $primary;
+  border-radius: 2rem;
+  border: 1px solid $secondaryText;
 }
