--- a/src/assets/styles/components/header.scss
+++ b/src/assets/styles/components/header.scss
@@ -1,5 +1,4 @@
 @use "../foundation/variables" as *;
-@use "../foundation/palettes" as *;
 @use "../foundation/mixins" as *;
 
 #open-navbar {
@@ -22,9 +21,9 @@
   span {
     width: 100%;
     display: inline-block;
-    border: 2px solid $accent;
+    border: 2px solid var(--accent);
     border-radius: 2px;
-    background-color: $accent;
+    background-color: var(--accent);
     transition: $site-transition;
   }
 }
@@ -40,7 +39,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
-  background-color: $transparentPrimary;
+  background-color: var(--transparentPrimary);
   transform: translateX(100%);
   transition: $site-transition;
   @include container-shadow;
@@ -63,7 +62,7 @@
       .header-navbar-link {
         width: max-content;
         display: inline-block;
-        color: $primaryText;
+        color: var(--primaryText);
         border-radius: 5px;
         text-decoration: none;
 
@@ -108,7 +107,7 @@ header {
   width: 100%;
   padding: 0.5rem 1rem;
   height: $header-height;
-  background-color: $transparentPrimary;
+  background-color: var(--transparentPrimary);
   transition: $site-transition;
   z-index: 5;
   @include glassmorphism;
