--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -1,5 +1,4 @@
 @use "../foundation/variables" as *;
-@use "../foundation/palettes" as *;
 @use "../foundation/mixins" as *;
 
 .home {
@@ -35,7 +34,7 @@
           right: 0;
           width: 100%;
           height: 100%;
-          background: linear-gradient(to left, $primary, transparent);
+          background: linear-gradient(to left, var(--primary), transparent);
           pointer-events: none;
         }
 
