--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -4,6 +4,7 @@
 @use "./foundation/typography";
 @use "./components/siteDecorator";
 @use "./components/header";
+@use "./components/footer";
 @use "./components/projectCard";
 @use "./pages/home";
 @use "./pages/services";
