--- a/src/assets/styles/pages/projects.scss
+++ b/src/assets/styles/pages/projects.scss
@@ -31,6 +31,13 @@
           border-radius: 1px;
         }
       }
+
+      .no-results {
+        text-align: center;
+        padding: 2rem;
+        font-size: 1.2rem;
+        color: var(--secondaryText);
+      }
     }
   }
 }
