Implement dynamic pages for projects

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -9,5 +9,6 @@
 @use "./pages/home";
 @use "./pages/services";
 @use "./pages/projects";
+@use "./pages/project";
 @use "./pages/customers";
 @use "./pages/contact";
