--- a/src/assets/styles/foundation/_typography.scss
+++ b/src/assets/styles/foundation/_typography.scss
@@ -41,11 +41,14 @@ h3,
 
 h4,
 h5,
-h6,
 .h4,
-.h5,
-.h6 {
+.h5 {
   font-size: clamp(1rem, 5vw, 2rem);
+}
+
+h6,
+.h6 {
+  font-size: 1rem;
 }
 
 p {
