Fix images deployment issue
Move `config.js` to the public folder
Move images to the public folder
Move videos to the public folder

--- a/src/assets/styles/foundation/_variables.scss
+++ b/src/assets/styles/foundation/_variables.scss
@@ -17,5 +17,5 @@ $transition-duration: 200ms;
 $site-transition: all $transition-duration ease-in-out;
 
 $fatha-ratio: math.div(317, 116);
-$active-icon: url('/src/assets/imgs/active-icon.png');
-$fatha-image: url('/src/assets/imgs/header-img.png');
+$active-icon: url('/imgs/active-icon.png');
+$fatha-image: url('/imgs/header-img.png');
