--- a/src/assets/styles/pages/home.scss
+++ b/src/assets/styles/pages/home.scss
@@ -52,7 +52,7 @@
           width: 6rem;
           aspect-ratio: 1/1;
           background-color: rgba(0, 0, 0, 0.1);
-          background-image: url('/src/assets/imgs/video-play.png');
+          background-image: url('/imgs/video-play.png');
           background-position: center;
           background-repeat: no-repeat;
           background-size: cover;
