Add decorators to the sections

--- a/src/assets/styles/components/projectCard.scss
+++ b/src/assets/styles/components/projectCard.scss
@@ -10,6 +10,10 @@
   align-items: center;
   gap: $card-gap;
 
+  &.reverse {
+    flex-direction: row-reverse;
+  }
+
   .details-sect {
     width: 40%;
     display: flex;
