--- a/src/assets/styles/foundation/_general.scss
+++ b/src/assets/styles/foundation/_general.scss
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   --container-max-width: $sm-size;
   background-color: var(--primary);
