Build about us section

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -5,6 +5,7 @@
 @use "./components/header";
 @use "./components/footer";
 @use "./components/projectCard";
+@use "./components/aboutUs";
 @use "./pages/home";
 @use "./pages/services";
 @use "./pages/projects";
