--- a/src/assets/styles/foundation/_mixins.scss
+++ b/src/assets/styles/foundation/_mixins.scss
@@ -129,6 +129,22 @@
     inset 0 -10px 15px rgba(255, 255, 255, 0.1),
     0 10px 15px rgba(0, 0, 0, 0.2);
   }
+
+  &.shadow-top {
+    box-shadow:
+      inset 0 10px 15px rgba(255, 255, 255, 0),
+      0 10px 15px rgba(0, 0, 0, 0);
+
+      &:hover,
+      &:active,
+      &:focus,
+      &:focus-within,
+      &.card-active {
+        box-shadow:
+        inset 0 10px 15px rgba(255, 255, 255, 0.1),
+        0 10px 15px rgba(0, 0, 0, 0.2);
+      }
+  }
 }
 
 @mixin fatha($pos: right) {
