--- a/src/assets/styles/foundation/_general.scss
+++ b/src/assets/styles/foundation/_general.scss
@@ -203,3 +203,20 @@ body {
 .field {
   @include field;
 }
+
+.logo-link {
+  display: flex;
+
+  img {
+    height: 70px;
+    object-fit: contain;
+    object-position: center;
+    filter: grayscale(100%) brightness(1000%) contrast(100%);
+  }
+}
+
+html[data-theme="light"] {
+  .logo-link img {
+    filter: unset;
+  }
+}
