--- a/src/assets/styles/foundation/_palettes.scss
+++ b/src/assets/styles/foundation/_palettes.scss
@@ -9,7 +9,7 @@
   --hoverSecondaryColor: #d6d6d6;
   --transparentAccent: #00758292;
   --transparentPrimary: #0c1d25d1;
-  --darkGray: #8b8b8b;
+  --footerColor: #212121;
 }
 
 html {
