--- a/src/assets/styles/foundation/_fonts.scss
+++ b/src/assets/styles/foundation/_fonts.scss
@@ -7,11 +7,11 @@ $fatimah: "/src/assets/fonts/Fatimah";
   src: url("#{$almarai}/Light.ttf") format("TrueType");
 }
 
-@font-face {
-  font-family: "Almarai";
-  font-weight: normal;
-  src: url("#{$almarai}/Regular.ttf") format("TrueType");
-}
+// @font-face {
+//   font-family: "Almarai";
+//   font-weight: normal;
+//   src: url("#{$almarai}/Regular.ttf") format("TrueType");
+// }
 
 @font-face {
   font-family: "Almarai";
@@ -19,11 +19,11 @@ $fatimah: "/src/assets/fonts/Fatimah";
   src: url("#{$almarai}/Bold.ttf") format("TrueType");
 }
 
-@font-face {
-  font-family: "Almarai";
-  font-weight: bolder;
-  src: url("#{$almarai}/ExtraBold.ttf") format("TrueType");
-}
+// @font-face {
+//   font-family: "Almarai";
+//   font-weight: bolder;
+//   src: url("#{$almarai}/ExtraBold.ttf") format("TrueType");
+// }
 
 @font-face {
   font-family: "Fatimah";
@@ -31,11 +31,11 @@ $fatimah: "/src/assets/fonts/Fatimah";
   src: url("#{$fatimah}/Light.otf") format("OpenType");
 }
 
-@font-face {
-  font-family: "Fatimah";
-  font-weight: normal;
-  src: url("#{$fatimah}/Regular.otf") format("OpenType");
-}
+// @font-face {
+//   font-family: "Fatimah";
+//   font-weight: normal;
+//   src: url("#{$fatimah}/Regular.otf") format("OpenType");
+// }
 
 @font-face {
   font-family: "Fatimah";
@@ -43,8 +43,8 @@ $fatimah: "/src/assets/fonts/Fatimah";
   src: url("#{$fatimah}/Blod.otf") format("OpenType");
 }
 
-@font-face {
-  font-family: "Fatimah";
-  font-weight: bolder;
-  src: url("#{$fatimah}/Black.otf") format("OpenType");
-}
+// @font-face {
+//   font-family: "Fatimah";
+//   font-weight: bolder;
+//   src: url("#{$fatimah}/Black.otf") format("OpenType");
+// }
