Move page styles next to pages files

--- a/src/pages/Projects/projects.scss
+++ b/src/pages/Projects/projects.scss
@@ -1,5 +1,4 @@
-@use "../foundation/variables" as *;
-@use "../foundation/mixins" as *;
+@use "../../assets/styles/foundation/variables" as *;
 
 .container.projects {
   .row {
