--- a/src/pages/Services/services.scss
+++ b/src/pages/Services/services.scss
@@ -1,5 +1,5 @@
-@use "../foundation/variables" as *;
-@use "../foundation/mixins" as *;
+@use "../../assets/styles/foundation/variables" as *;
+@use "../../assets/styles/foundation/mixins" as *;
 
 .container.services {
   .row {
