--- a/src/assets/styles/foundation/_variables.scss
+++ b/src/assets/styles/foundation/_variables.scss
@@ -11,7 +11,7 @@ $header-height: 90px;
 $container-paddingX: 2rem;
 $container-paddingY: ($header-height * 1.5);
 
-$card-border-radius: 40px;
+$card-border-radius: clamp(20px, 2vw, 40px);
 
 $transition-duration: 200ms;
 $site-transition: all $transition-duration ease-in-out;
