--- a/src/pages/Services/services.scss
+++ b/src/pages/Services/services.scss
@@ -52,7 +52,7 @@
               .h2 {
                 display: block;
                 text-align: center;
-                font-size: clamp(0.5rem, 3vw, 1.5rem);
+                font-size: clamp(0.5rem, 3vw, 1.2rem);
                 font-weight: lighter;
               }
             }
@@ -78,7 +78,11 @@
         }
 
         .description {
-          text-align: center;
+          text-align: justify;
+
+          @media screen and (min-width: #{$md-size}) {
+            width: 80%;
+          }
         }
       }
     }
