--- a/src/pages/Home/aboutUs.scss
+++ b/src/pages/Home/aboutUs.scss
@@ -1,5 +1,5 @@
-@use "../foundation/variables" as *;
-@use "../foundation/mixins" as *;
+@use "../../assets/styles/foundation/variables" as *;
+@use "../../assets/styles/foundation/mixins" as *;
 
 .container.aboutus {
   padding-top: 1rem;
@@ -12,7 +12,6 @@
     .col {
       .card {
         background: linear-gradient(180deg, #0075824c 10%, transparent, transparent);
-        border-radius: 20px;
 
         .h3 {
           font-size: clamp(2rem, 6vw, 3rem);
