--- a/src/pages/Services/services.scss
+++ b/src/pages/Services/services.scss
@@ -28,7 +28,6 @@
           }
 
           .service-item {
-            // padding: 0 0.5rem;
             flex-grow: 1;
             display: flex;
             flex-direction: column;
@@ -59,16 +58,26 @@
           }
         }
       }
+    }
 
-      &.service-details {
+    &.fatha-right {
+      position: relative;
+      height: 40vh;
+
+      .service-details {
+        position: absolute;
         max-width: clamp(95%, 35rem, 80%);
-        display: none;
+        display: flex;
         flex-direction: column;
         align-items: center;
         gap: $elem-gap;
+        transform: translateY(30%);
+        transition: $site-transition;
+        opacity: 0;
 
         &.active {
-          display: flex;
+          transform: translateY(0);
+          opacity: 1;
         }
 
         .h1 {
