--- a/src/assets/styles/components/projectCard.scss
+++ b/src/assets/styles/components/projectCard.scss
@@ -56,7 +56,7 @@
         object-fit: cover;
         object-position: center;
         aspect-ratio: 16/9;
-        border-radius: calc($card-border-radius - $card-gap);
+        border-radius: calc($card-border-radius - ($card-gap / 2));
       }
     }
   }
