--- a/src/assets/styles/foundation/_palettes.scss
+++ b/src/assets/styles/foundation/_palettes.scss
@@ -21,6 +21,6 @@ html {
     --primaryText: #000000;
     --primaryTextVariant: #FFFFFF;
     --transparentPrimary: #FFFFFFd1;
-    --footerColor: #eaeaea;
+    --footerColor: #212121;
   }
 }
