--- a/src/assets/styles/foundation/_typography.scss
+++ b/src/assets/styles/foundation/_typography.scss
@@ -1,4 +1,5 @@
 @use "../foundation/variables" as *;
+@use "../foundation/mixins" as *;
 
 body {
   font-family: Fatimah, Almarai;
@@ -17,10 +18,12 @@ span {
 
 .heading-font {
   font-family: Fatimah;
+  @include glow-effect(text);
 }
 
 .content-font {
   font-family: Almarai;
+  @include glow-effect(text);
 }
 
 h1,
