--- a/src/pages/Home/aboutUs.scss
+++ b/src/pages/Home/aboutUs.scss
@@ -14,7 +14,10 @@
         background: linear-gradient(180deg, #0075824c 10%, transparent, transparent);
 
         .h3 {
+          display: inline-block;
           font-size: clamp(2rem, 6vw, 3rem);
+          line-height: 1;
+          margin-bottom: 2rem;
         }
 
         .desc {
