--- a/src/pages/Projects/projects.scss
+++ b/src/pages/Projects/projects.scss
@@ -1,4 +1,5 @@
 @use "../../assets/styles/foundation/variables" as *;
+@use "../../assets/styles/foundation/mixins" as *;
 
 .container.projects {
   .row {
@@ -28,13 +29,7 @@
           margin: 2rem var(--card-inner-gap);
           border: 1px solid var(--accent);
           border-radius: 1px;
-          box-shadow:
-            0 0 5px var(--transparentAccent),
-            0 0 15px var(--transparentAccent),
-            0 0 25px var(--transparentAccent),
-            0 0 35px var(--transparentAccent),
-            0 0 45px var(--transparentAccent),
-            0 0 55px var(--transparentAccent);
+          @include glow-effect;
         }
       }
 
