--- a/src/pages/Services/services.scss
+++ b/src/pages/Services/services.scss
@@ -44,6 +44,10 @@
                 width: 100%;
                 object-fit: contain;
                 object-position: center;
+
+                @media screen and (min-width: #{$md-size}) {
+                  transform: scale(0.6);
+                }
               }
             }
 
@@ -88,6 +92,7 @@
 
         .description {
           text-align: justify;
+          font-size: 1rem;
 
           @media screen and (min-width: #{$md-size}) {
             width: 80%;
